# utec-labs

./: README.md
ej10comp/: ej10comp.cpp
ej2comp-struct/: ej2comp-struct.cpp
ej6comp/: main.cpp
ej7comp/: ej7comp.cpp  main.cpp
ej8comp/: ej8comp (1).cpp  ej8comp (2).cpp  ej8comp.cpp  ej8comppp.h
ejercicios-complementarios/: complementarioiteraciones2.c  complementariosfunciones4.cpp  ejercicio-auxiliar-2.c
estructej1/: main.cpp
extras/: complementariosfunciones3.cpp
lab-pp/: lab-pp.zpr  lab.cpp  main.cpp  sorteo.cpp  sorteo.h
lab-sorteo/: main.cpp  sorteo.cpp  sorteo.h
pa-3er-semestre/lab-2/: CMakeLists.txt  lab2test  main.cpp
pa-3er-semestre/lab-2/negocio/: Apartamento.h  Casa.h  ISistema.h  Inmueble.h  Propietario.h  Sistema.cpp  Sistema.h
pa-3er-semestre/lab-2/negocio/datatypes/: DTApartamento.h  DTCasa.h  DTCliente.cpp  DTCliente.h  DTInmobiliaria.cpp  DTInmobiliaria.h  DTInmobiliariaDetalles.h  DTInmueble.cpp  DTInmueble.h  DTInmuebleDetalles.h  DTInteres.h  DTListaPublicacion.cpp  DTListaPublicacion.h  DTPropietario.h  DTPublicacion.cpp  DTPublicacion.h  DTRango.h  DTTecho.h  DTTipoPublicacion.h  Date.h
pa-3er-semestre/lab-2/presentacion/: PantallaAltaInmueble.cpp  PantallaAltaInmueble.h  PantallaAltaPublicacion.cpp  PantallaAltaPublicacion.h  PantallaConsultarPublicaciones.cpp  PantallaConsultarPublicaciones.h  PantallaRepresentarPropietario.cpp  PantallaRepresentarPropietario.h
practico10/: ejercicio3-1.cpp  ejercicio3-3.cpp  ejercicio8.cpp  formulacuadratica.cpp
practico2/: ejercicio10.c  ejercicio11.c  ejercicio13-2.c  ejercicio13.c  ejercicio14.c
practico3/: ejercicio6.c  ejercicio8.c  ejercicio9.c
practico4/: ejercicio5.c
practico5/: ejercicio4.c
practico6/: ejercicio5.c  (+1 more)
(+159 files in other folders)
